--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -83,7 +83,7 @@ body{direction: rtl;text-align: right;}
 
 
  /*start login*/
- .login-page{margin:0;color:#6a6f8c;background:var(--second--color);font:600 16px/18px 'Open Sans',sans-serif;}
+.login-page{margin:0;color:#6a6f8c;background:var(--second--color);font:600 16px/18px 'Open Sans',sans-serif;}
 
 *,:after,:before{box-sizing:border-box}
 
@@ -97,7 +97,7 @@ a{color:inherit;text-decoration:none}
 	width:100%;
 	margin:auto;
 	max-width: 719px;
-	min-height:900px;
+	min-height:700px;
 	position:relative;
 	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
 }
@@ -109,12 +109,12 @@ a{color:inherit;text-decoration:none}
 	padding:90px 70px 50px 70px;
 	background-color: var(--main--color);
 }
-.logo-login{
-    display: block;
-    width: 100%;
-    margin-bottom: 60px;
-    margin-right: 36%;
-}
+.logo-login{display: block;width: 100%;margin-bottom: 60px;margin-right: 36%;}
+
+.container-signbtn{margin-bottom: 20px;width: 100%;text-align: center;}
+
+.container-signbtn .sign-btns{margin-left: 15px;font-size: 25px;color: var(--second--color);text-decoration: none;}
+
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
 	top:0;
@@ -122,34 +122,15 @@ a{color:inherit;text-decoration:none}
 	right:0;
 	bottom:0;
 	position:absolute;
-	transform:rotateY(180deg);
-	backface-visibility:hidden;
 	transition:all .4s linear;
 }
-.login-html .sign-in,
-.login-html .sign-up,
-.login-form .group .check{
-	display:none;
-}
-.login-html .tab,
+
 .login-form .group .label,
 .login-form .group .button{
 	text-transform:uppercase;
 }
-.login-html .tab{
-	font-size:22px;
-	margin-right:15px;
-	padding-bottom:5px;
-	margin:0 15px 10px 0;
-	display:inline-block;
-	border-bottom:2px solid transparent;
-}
-.login-html .sign-in:checked + .tab,
-.login-html .sign-up:checked + .tab{
-	color:#fff;
-	border-color:#aaa;
-}
-.login-form{min-height:345px;position:relative;perspective:1000px;transform-style:preserve-3d;}
+
+.login-form{min-height:345px;position:relative;}
 
 .login-form .group{margin-bottom:15px;}
 
@@ -169,40 +150,9 @@ a{color:inherit;text-decoration:none}
 }
 .login-form .group .label{color:#aaa;font-size:12px;}
 
-.login-form .group .button{background:var(--second--color);}
-
-.login-form .group label .icon{
-	width:15px;
-	height:15px;
-	border-radius:2px;
-	position:relative;
-	display:inline-block;
-	background:rgba(255,255,255,.1);
-}
-.login-form .group label .icon:before,
-.login-form .group label .icon:after{
-	content:'';
-	width:10px;
-	height:2px;
-	background:#fff;
-	position:absolute;
-	transition:all .2s ease-in-out 0s;
-}
-.login-form .group label .icon:before{left:3px;width:5px;bottom:6px;transform:scale(0) rotate(0);}
-
-.login-form .group label .icon:after{top:6px;right:0;transform:scale(0) rotate(0);}
+.login-form .group .button{background:var(--second--color);width: 65%;margin: 50px auto;}
 
 .login-form .group .check:checked + label{color:#fff;}
-
-.login-form .group .check:checked + label .icon{background:#1161ee;}
-
-.login-form .group .check:checked + label .icon:before{transform:scale(1) rotate(45deg);}
-
-.login-form .group .check:checked + label .icon:after{transform:scale(1) rotate(-45deg);}
-
-.login-html .sign-in:checked + .tab + .sign-up + .tab + .login-form .sign-in-htm{transform:rotate(0);}
-
-.login-html .sign-up:checked + .tab + .login-form .sign-up-htm{transform:rotate(0);}
 
 .hr{height:2px;margin:60px 0 50px 0;background:rgba(255,255,255,.2);}
 
