--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -8,9 +8,8 @@ body{direction: rtl;text-align: right;}
 
 /*start navbar*/
 .navbar-edit{
-    position: absolute;
-    position: fixed;
-    z-index: 1;
+    position: sticky;
+    z-index: 2000;
     top: 0;
     right: 0;
     left: 0;
@@ -20,7 +19,11 @@ body{direction: rtl;text-align: right;}
 
 .navbar-edit.Home {
     background: initial;
+    position: fixed !important;
 }
+/* logout nav
+navbar-edit ul li a{margin-right:80px;}
+*/
 .ciear{visibility: hidden;}
 .logo{color:var(--selver--color) !important;font-size: 35px;font-family: 'Dancing Script', cursive;}
 
@@ -163,3 +166,271 @@ a{color:inherit;text-decoration:none}
 
 .foot-lnk{text-align:center;}
  /*end login*/
+/*section-box*/
+.snip1573 {
+  background-color: #000;
+  display: inline-block;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  margin: 10px;
+  width: 340px !important;
+  height:228px;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  margin-left: 17px;
+}
+.snip1573 * {box-sizing: border-box;transition: all 0.35s ease;}
+
+.snip1573:before,
+.snip1573:after {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+  background-color: var(--main--color);
+  border-left: 3px solid #fff;
+  border-right: 3px solid #fff;
+  content: '';
+  opacity: 0.9;
+  z-index: 1;
+}
+
+.snip1573:before {transform: skew(45deg) translateX(-155%);}
+
+.snip1573:after {transform: skew(45deg) translateX(155%);}
+
+.snip1573 img {
+  backface-visibility: hidden;
+  width: 100%;
+  height: 228px;
+  vertical-align: top;
+  object-fit: cover;
+}
+
+.snip1573 figcaption {
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  z-index: 2;
+  -webkit-transform: translate(-50%, -50%) scale(0.5);
+  transform: translate(-50%, -50%) scale(0.5);
+  opacity: 0;
+  -webkit-box-shadow: 0 0 10px #000000;
+  box-shadow: 0 0 10px #000000;
+}
+
+.snip1573 h3 {
+  background-color:var(--second--color);
+  border: 2px solid #fff;
+  color: #fff;
+  font-size: 1em;
+  font-weight: 600;
+  letter-spacing: 1px;
+  margin: 0;
+  padding: 5px 10px;
+  text-transform: uppercase;
+}
+.snip1573 a {text-decoration: none;}
+
+.snip1573 a:hover{color: var(--main--color);}
+
+.snip1573:hover > img,
+.snip1573.hover > img {
+  opacity: 0.5;
+}
+
+.snip1573:hover:before,
+.snip1573.hover:before {
+  transform: skew(45deg) translateX(-55%);
+}
+
+.snip1573:hover:after,
+.snip1573.hover:after {
+  transform: skew(45deg) translateX(55%);
+}
+
+.snip1573:hover figcaption,
+.snip1573.hover figcaption {
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+}
+/*section box*/
+/*start add-craft*/
+
+.testbox, .testbox div,
+.testbox form, .testbox input,
+.testbox select, .testbox textarea,
+.testbox label,.testbox p { 
+  margin: 0;
+  margin-bottom: 7px;
+  outline: none;
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 14px;
+  color: #666;
+  line-height: 22px;
+}
+.testbox h1 {
+  position: absolute;
+  margin: 0;
+  font-size: 48px;
+  color: #fff;
+  z-index: 2;
+  line-height: 83px;
+}
+.testbox textarea {width: calc(100% - 12px);padding: 5px;}
+
+.testbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: inherit;
+  padding: 20px;
+  min-height: 100%;
+}
+.testbox form {
+  width: 100%;
+  padding: 20px;
+  border-radius: 6px;
+  background: #fff;
+  box-shadow: 0 0 8px  var(--main--color); 
+}
+.testbox .banner {
+  position: relative;
+  height: 300px;
+  background-image: url("../img/pexels-flora-westbrook-4191618.jpg");  
+  background-size: cover;
+  display: flex;
+  margin-bottom: 20px!important;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.testbox .banner::after {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.2); 
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.testbox input, .testbox select, .testbox textarea {margin-bottom: 10px;border: 1px solid #ccc;border-radius: 3px;}
+
+.testbox input {width: calc(100% - 10px);padding: 5px;}
+
+.testbox input[type="date"] {padding: 4px 5px;}
+
+.testbox textarea {width: calc(100% - 12px);padding: 5px;}
+
+.testbox .item:hover p, .testbox .item:hover i, .testbox .question:hover p, .testbox .question label:hover, .testbox input:hover::placeholder {color:  #669999;}
+
+.testbox .item input:hover, .testbox .item select:hover, .testbox .item textarea:hover {border: 1px solid transparent;box-shadow: 0 0 3px 0  #669999;color: #669999;}
+
+.testbox .item {position: relative;margin: 10px 0;margin-left: 50px;}
+
+.testbox input[type="date"]::-webkit-inner-spin-button {display: none;}
+
+.testbox .item i, .testbox input[type="date"]::-webkit-calendar-picker-indicator {position: absolute;font-size: 20px;color:  #a3c2c2;}
+
+.testbox .item i {right: 1%;top: 30px;z-index: 1;}
+
+.testbox [type="date"]::-webkit-calendar-picker-indicator {right: 1%;z-index: 2;opacity: 0;cursor: pointer;}
+
+.testbox input[type=radio], .testbox input[type=checkbox]  {display: none;}
+
+.testbox label.radio {position: relative;display: inline-block;margin: 5px 20px 15px 0;cursor: pointer;}
+
+.testbox .question span {margin-left: 30px;}
+
+.testbox .question-answer label {display: block;}
+
+.testbox label.radio:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 17px;
+  height: 17px;
+  border-radius: 50%;
+  border: 2px solid #ccc;
+}
+.testbox input[type=radio]:checked + .testbox label:before, .testbox label.radio:hover:before {border: 2px solid  #669999;}
+
+.testbox  label.radio:after {
+  content: "";
+  position: absolute;
+  top: 6px;
+  left: 5px;
+  width: 8px;
+  height: 4px;
+  border: 3px solid  #669999;
+  border-top: none;
+  border-right: none;
+  transform: rotate(-45deg);
+  opacity: 0;
+}
+.testbox  input[type=radio]:checked + label:after {opacity: 1;}
+
+.testbox .flax {display:flex;}
+
+.testbox .btn-block {margin-top: 10px;text-align: center;}
+
+.testbox  button {
+  width: 150px;
+  padding: 10px;
+  border: none;
+  border-radius: 5px; 
+  background: var(--main--color);
+  font-size: 16px;
+  color: #fff;
+  cursor: pointer;
+}
+.testbox  button:hover {background:  #a3c2c2;}
+
+@media (min-width: 568px) {
+.testbox .name-item, .testbox .city-item {display: flex;flex-wrap: wrap;justify-content: space-between;}
+
+.testbox .name-item input, .testbox .name-item div {width: calc(50% - 20px);}
+
+.testbox .name-item div input {width:97%;}
+
+.testbox .name-item div label {display:block;padding-bottom:5px;}
+}
+.upload-add{
+  width: 302px;
+  height: 302px;
+  border: 1px solid var(--main--color);
+  display: flex;
+  justify-content:center ;
+  align-items: center;
+  font-weight: bold;
+  color: var(--Navy--color);
+  margin-right: auto;
+}
+.input-files{
+  color: var(--White--color) !important;
+  height: 60px;
+  width: 250px;
+  background-color: var(--main--color);
+  border-radius: 50px;
+  margin: 20px !important;
+  font-size: 20px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.imguploadserves{ width: 100%;height: 100%;object-fit: cover;}
+/*end add-craft*/
+/*sections-craft*/
+.sections-craft .title-sections-craft{
+  font-size: 50px;
+  font-family: 'Harmattan', sans-serif;
+  font-weight: bold;
+  color: #4547488a;
+  margin-top: 40px;
+  margin-bottom: -25px;
+  text-align: center;
+}
+/*sections-craft*/
