--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -43,6 +43,8 @@ body{direction: rtl;text-align: right;overflow-x: hidden;}
 
 .navbar-edit ul li a{ margin-right: 25px;font-size: 19px!important;color: var(--second--color)!important;}
 
+.navbar-edit ul li a:hover{color: #fff !important;}
+
 .navbar-edit ul li a i{margin-left: 10px;font-size: 20px;color:var(--White--color);}
 
 .navbar-edit ul li button{font-size: 18px;margin-right: 20px;margin-top: 5px;}
@@ -146,7 +148,9 @@ a{color:inherit;text-decoration:none}
 
 .container-signbtn{margin-bottom: 20px;width: 100%;text-align: center;}
 
-.container-signbtn .sign-btns{margin-left: 15px;font-size: 25px;color: var(--second--color);text-decoration: none;}
+.container-signbtn .sign-btns{margin-left: 30px;font-size: 25px;color: var(--second--color);text-decoration: none;}
+
+.container-signbtn .sign-btns:hover{color: var(--selver--color)!important;}
 
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
