--- a/admin/layout/css/main.css
+++ b/admin/layout/css/main.css
@@ -435,5 +435,39 @@ white-space: nowrap;
     margin-top: 50px;
     color: var(--second--color);   
 }
+.upload-add{
+    width: 325px;
+    height: 215px;
+    border: 1px solid var(--main--color);
+    display: flex;
+    justify-content:center ;
+    align-items: center;
+    font-weight: bold;
+    color: var(--Navy--color);
+    margin-left: 140px;
+    margin-top: 50px;
+    margin-right: 95px;  
+}
+  .input-files{
+    color: var(--White--color) !important;
+    height: 60px;
+    width: 190px;
+    background-color: var(--main--color);
+    border-radius: 50px;
+    margin: 20px 150px !important;
+    font-size: 20px !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+  .imguploadserves{ width: 100%;height: 100%;object-fit: cover;}
+.form-img-container{
+    width: 325px;
+    height: 215px;
+    border: 1px solid var(--second--color);
+    margin-top: 50px;
+}
+.form-img-container img{width: 100%;height: 100%;object-fit: cover;}
 
 /*end form*/
