--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -645,7 +645,7 @@ a{color:inherit;text-decoration:none}
 
 .edit-profile-form .profile-upload {position: relative;max-width: 205px;margin: 50px auto;}
 
-.edit-profile-form .profile-upload .avatar-edit {position: absolute;right: 12px;z-index: 1;top: 10px;}
+.edit-profile-form .profile-upload .avatar-edit {position:inherit;right:-65px;z-index: 1;top: 10px;}
 
 .edit-profile-form .profile-upload .avatar-edit input {display: none;}
 
@@ -673,6 +673,7 @@ a{color:inherit;text-decoration:none}
   border-radius: 100%;
   border: 6px solid #F8F8F8;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
+  margin-top: -65px;
 }
 .edit-profile-form .profile-upload .avatar-preview > div {
   width: 100%;
